--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="34.jpg" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
     <h1>Love you Bangladesh</h1>
     <p> LOve bangladesh more and more</p>
+    <img src="emon.jpg" width="200px" height="200px" alt="">
 
 </body>
 </html>
